added game picture upload feature

--- a/src/main/resources/templates/modaleCreateGame.html
+++ b/src/main/resources/templates/modaleCreateGame.html
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form method="POST" action="/addRegistrationGame">
+      <form method="POST" action="/addRegistrationGame" enctype="multipart/form-data">
         <div class="modal-body">
           <div class="form-group">
             <label for="name">Nom du jeux</label>
@@ -16,9 +16,10 @@
           </div>
           <div class="form-group">
             <label for="picture">Image:</label>
-				<input type="file" id="picture" name="picture" aria-describedby="pictureHelp" accept="image/png, image/jpeg">
+				<input type="file" id="picture" name="file_picture" aria-describedby="pictureHelp" accept="image/png, image/jpeg">
 				<img id="picturePreview" src="#" alt="your image" class="d-none"/>            
 				<small id="pictureHelp" class="form-text text-muted">Choisissez une image</small>
+				<input type="hidden" name="picture" value="">
           </div>        
           <div class="form-group">
             <label for="author">Auteur</label>
