--- a/src/main/resources/templates/modaleCreateGame.html
+++ b/src/main/resources/templates/modaleCreateGame.html
@@ -16,8 +16,8 @@
           </div>
           <div class="form-group">
             <label for="picture">Image:</label>
-				<input type="file" id="picture" name="file_picture" aria-describedby="pictureHelp" accept="image/png, image/jpeg">
-				<img id="picturePreview" src="#" alt="your image" class="d-none"/>            
+				<input type="file" id="pictureCreate" name="file_picture" aria-describedby="pictureHelp" accept="image/png, image/jpeg">
+				<img id="picturePreviewCreate" src="#" alt="your image" class="d-none"/>            
 				<small id="pictureHelp" class="form-text text-muted">Choisissez une image</small>
 				<input type="hidden" name="picture" value="">
           </div>        
