--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -88,17 +88,19 @@
 								</fieldset>
 								<fieldset class="border p-3 text-left">
 									<legend class="w-auto">Vos jeux inscrits</legend>
-									<div class="row align-items-center">										
-										 <div class="card col-3" th:each="game : ${games}" th:if="${registration.society} == ${game.society}"> 
-											<img th:src="${game.picture}"  class="card-img-top" alt="image du jeu">
-											<div class="card-body">
-												<p class="card-text" th:text="|Nom : game.name|"></p> 
+									<div class="fluid-container">
+										<div class="row align-items-center">										
+											 <div class="card col-12 col-md-6 col-lg-2 gameCardTop p-0" th:each="game : ${registration.games}" > <!-- th:if="${registration.society} == ${game.society}" -->
+												<img th:src="${game.picture}"  class="card-img-top" alt="image du jeu">
+												<div class="card-body gameCardBody p-0 m-0">
+													<p class="card-text" th:text="${game.name}"></p> 
+												</div>
 											</div>
 										</div>										
-										<div class="col-sm-12">
+										<div class="row mt-5 regGamesMsg">
 											<p th:text="|Vous avez demandé ${registration.tablesQuantity} tables, vous devez inscrire ${registration.tablesQuantity} jeux.|"></p>											
-										</div>
-									</div>  
+										</div>	 
+									</div> 
 								</fieldset>
 								<fieldset class="border p-3 text-left">
 									<legend class="w-auto">Vos collaborateurs</legend>
