légers fix front home

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -27,7 +27,7 @@
 	        </div>	
 	            <div class="pcard"></div>
 	            <div class="container containerTitleStyle">
-	                <h2 class="col-12 title">&Eacute;vènements:</h2>
+	                <h2 class="col-12 mb-4 title">&Eacute;vènements:</h2>
 	            </div> 
 	            <div th:if="!${eventError.errorON}" class="container containerStyle" th:each="event : ${event}">
 	                <div class="col-sm-12 p-0">
@@ -41,7 +41,7 @@
 								<p class="regMessage" th:unless="${event.event.registrationOpen}" th:text="${event.event.registrationMessage}"></p>
 								<input name="id" type="hidden" th:value="${event.event.id}">
 								<button type="submit" th:if="${event.subscribeBtnOn} and ${event.event.registrationOpen}" class="col-6 col-md-4 col-lg-2 btn btn-primary registrateBtn">S'inscrire</button>
-								<p class="eventSubscribeMsg" th:if="!${event.subscribeBtnOn} and ${event.hasSubscribe}">Vous avez fait une demande d'inscription à cet évènement</p>
+								<p class="text-center eventSubscribeMsg" th:if="!${event.subscribeBtnOn} and ${event.hasSubscribe}">Vous avez fait une demande d'inscription à cet évènement</p>
 							</form>	
 						</div>
 					</div>
@@ -54,7 +54,7 @@
 			<section class="fluid-container" id="inscription">
 				<div class="pcard"></div>
 				<div class="container containerTitleStyle">
-					<h2 class="col-12 title">Mes inscriptions:</h2>
+					<h2 class="col-12 mb-4 title">Mes inscriptions:</h2>
 					<h3 class="col-12 title" th:if="${#lists.isEmpty(registrations)}">Aucune inscription effectuée.</h3>
 				</div>				
 				<div class="container containerStyle" th:each="registration : ${registrations}">
@@ -146,7 +146,7 @@
 			<section id="information" class="fluid-container">
 				<div class="pcard" ></div>
 					<div class="container containerTitleStyle">
-						<h2 class="col-sm-12 p-0 title">Mes informations:</h2>
+						<h2 class="col-sm-12 p-0 mb-4 title">Mes informations:</h2>
 					</div>
 				<div class="container containerStyle">
 					<div class="col-sm-12 p-0">  
