--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -132,7 +132,7 @@
 									<input type="hidden" id="regitration" th:name="registrationId" th:value="${registration.id}">
 								</form>
 								<form class="d-flex justify-content-end"  method="post" action="/deleteEditorRegistration">
-									<button type="submit" class="col-10 col-md-6 col-lg-3 btn btn-primary subscribeModifBtn" >Supprimer ma demande</button>
+									<button type="submit" class="col-10 col-md-6 col-lg-3 btn btn-primary subscribeModifBtn" onclick="return confirm('Etes-vous sûr de vouloir annuler votre inscription ?');" >Annuler ma demande</button>
 									<input type="hidden" id="regitration" th:name="registrationId" th:value="${registration.id}">
 								</form>						
 							</div>
