--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -24,7 +24,7 @@
 	      <ul class="navbar-nav col-12 col-lg-6 cd-main-nav" th:if="${navbarLinks.currentPage} == 'home'">
 	
 	        <li class="nav-item mx-auto">
-	          <a class="nav-link navElement" href="#evenement">Evenement</a>
+	          <a class="nav-link navElement" href="#evenement">Evenements</a>
 	        </li>
 	        <li class="nav-item mx-auto">
 	          <a class="nav-link navElement" href="#inscription">Mon Inscription</a>
